# kusse-portfolio

./: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  manage.py  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: task.md
.github/workflows/: ci.yml
apps/pages/: apps.py  navigation.py  tests.py  urls.py  views.py
apps/pages/templates/pages/: about.html  (+5 more)
apps/projects/: admin.py  models.py  tests.py  urls.py  views.py
apps/projects/migrations/: 0001_initial.py  0002_project_image_project_image_alt_text.py
config/: asgi.py  context_processors.py  settings.py  urls.py  wsgi.py
docs/: architecture.md  content-architecture.md  product-brief.md  project-charter.md  quality-and-automation.md  requirements.md  roadmap.md
docs/decisions/: 0001-public-professional-portfolio.md
docs/dev-tools/audits/: accessibility-checklist.md  accessibility-semantic-hardening.md
docs/projects/: presentation-model.md
static/css/: base.css  components.css  layout.css  main.css  utilities.css
static/css/base/: reset.css  tokens.css  typography.css
static/css/components/: button.css  card.css  check-list.css  contact-cta.css  footer.css  form.css  header.css  hero.css  section-heading.css  tag-list.css
static/css/layouts/: container.css  grid.css  section.css  split.css
static/js/: main.js
templates/: base.html
templates/components/: card.html  section_heading.html
templates/includes/: footer.html  header.html
templates/sections/: card_grid.html  contact_cta.html  hero.html  split_checklist.html  tag_list.html
(+3 files in other folders)
