[project]
name = "kusse-portfolio"
version = "0.1.0"
description = "Professional portfolio website for Kusse Sukuta Bersha."
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "django>=5.2,<6.0",
    "django-environ>=0.12,<0.13",
    "pillow>=11.0,<13.0",
]

[dependency-groups]
dev = [
    "django-stubs[compatible-mypy]>=6.0.5,<7.0.0",
    "django-stubs-ext>=6.0.5,<7.0.0",
    "ruff>=0.15.15",
    "pre-commit>=4.6.0",
]

[tool.mypy]
plugins = [
    "mypy_django_plugin.main",
]
python_version = "3.13"
strict = true
ignore_missing_imports = false

[[tool.mypy.overrides]]
module = ["environ"]
ignore_missing_imports = true

[tool.django-stubs]
django_settings_module = "config.settings"

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]

